fixed layout issues

--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -1,16 +1,16 @@
 // Buttons
 .header-main-button {
+  position: absolute;
+  bottom: 30px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1;
   border-radius: 30px;
   color: #fff;
   background: $main-color;
   border: 2px #fff solid;
   display: inline-block;
-  padding: 10px 25px;
-  position: absolute;
-  bottom: 30px;
-  right: 50%;
-  transform: translateX(50%);
-  z-index: 1;
+  padding: 5px 20px;
 }
 
 .services-button {
