--- a/sass/_mediaQueries.scss
+++ b/sass/_mediaQueries.scss
@@ -3,7 +3,7 @@
     display: none;
   }
   #main-header {
-    grid-template-rows: 70px 200px 1fr 1fr;
+    grid-template-rows: 70px 150px 1fr 1fr;
     grid-template-columns: 1fr 1fr;
 
     .main-nav {
@@ -32,23 +32,28 @@
     .header-column-1 {
       grid-row: 2/3;
       grid-column: 1/3;
+      text-align: center;
 
       .logo {
-        top: 15px;
+        top: 10px;
         left: 30px;
-        width: 100px;
-        height: 100px;
+        width: 80px;
+        height: 80px;
         z-index: 100;
       }
 
       h1 {
-        margin-top: 0;
         font-size: $titleMediumSize;
+
+        span {
+          display: inline-block;
+        }
       }
 
       .header-main-button {
         bottom: 200px;
         font-size: 1.2rem;
+        padding: 15px 30px;
         &:hover {
           background: darken($main-color, 20%);
         }
@@ -136,7 +141,7 @@
 
   #benefits {
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 100px 1fr 1fr;
+    grid-template-rows: 100px 400px 400px;
     font-size: $textMediumSize;
 
     .title-benefits {
@@ -183,13 +188,10 @@
   }
 
   .contactForm {
-    height: 60vh;
+    padding: 20px;
     .contact-form {
-      height: 95%;
-      padding: 20px;
       width: 50%;
       margin: auto;
-
 
       h2 {
         font-size: $titleMediumSize;
@@ -198,7 +200,6 @@
 
       .main-form {
         justify-items: center;
-
 
         label{
           font-size: 1.5rem;
@@ -227,10 +228,9 @@
   }
 
   footer {
-    height: 50vh;
     .footer-container {
       grid-template-columns: 1fr 1fr;
-      grid-template-rows: 1fr 100px;
+      grid-template-rows: 300px 100px;
 
       .footer-1 {
         grid-column: 1/2;
@@ -275,46 +275,39 @@
     .header-column-1 {
       grid-row: 1/5;
       grid-column: 1/2;
-      @include useFlexbox(column, flex-end, center);
 
       .logo {
         position: absolute;
         display: block;
-        height: 100px;
-        width: 100px;
-        top: 50%;
-        left: 80px;
-        transform: translateY(-50%);
+        left: 20px;
         margin-bottom: 50px;
         border-radius: 100%;
       }
 
       h1 {
         position: absolute;
-        top: 80px;
-        left: 60px;
-        font-size: $titleMediumSize;
-        animation: heading;
-        animation-duration: 3s;
-        animation-fill-mode: forwards;
+        top: 150px;
+        left: 100px;
+        font-size: 6rem;
         z-index: 10;
+        text-align: left;
+        span {
+          display: block;
+        }
       }
 
       .header-main-button {
-        position: absolute;
-        left: 60px;
-        bottom: 80px;
         border-radius: 30px;
         font-weight: bold;
-        background: lighten($main-color, 5%);
+        background: $main-color;
         color: #fff;
-        padding: 0;
+        padding: 15px 50px;
         border: 2px #fff solid;
         display: inline-block;
         font-size: 1.3rem;
+        left: 110px;
         transform: translateX(0);
-        width: 150px;
-        text-align: center;
+        box-shadow: 0 0 4px #fff;
       }
     }
     .header-column-2 {
@@ -325,7 +318,6 @@
       @include useFlexbox(column, flex-end, stretch);
 
       .header-column-2-text{
-        margin-bottom: 150px;
         height: 150px;
         @include useFlexbox(column, center, stretch);
         text-align: left;
@@ -433,8 +425,7 @@
   } // end services
 
   #benefits {
-    height: $viewPortHeight;
-    grid-template-rows: 1fr repeat(5, 1fr);
+    grid-template-rows: 150px repeat(5, 100px);
     grid-template-columns: 1fr 1fr 1fr;
     font-size: $textMediumSize;
     grid-gap: 10px;
@@ -508,12 +499,12 @@
     .contact-picture {
       @include useFlexbox(column, center, center);
       color: #fff;
-      height: 95%;
       border-radius: 20px;
       background: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8)),
       url("../img/contactPic.jpg") center / cover no-repeat;
       font-size: 2.5rem;
       width: 45%;
+      height: 621px;
       h2 {
         color: yellow;
         font-family: $titleFonts;
@@ -552,7 +543,6 @@
 
   footer {
     .footer-container {
-      width: 70%;
       margin: auto;
     }
   }
