--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -4,7 +4,7 @@ $mainTextFonts:'Poppins', sans-serif;
 
 // Colors
 $main-color: #0fa788;
-$secondary-color: #65a9b1;
+$secondary-color: #1BFFFF;
 $terciary-color: #A468FF;
 $paragraphColor: #393d3d;
 
